# Gemma-4-31B-MTP-vLLM-Server

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
config/: cluster_topologies.example.yaml  profiles.yaml
constraints/: vllm-0.21.0-cu130.txt
docs/benchmarks/: homelander-fp8-gpuonly-vllm021-tp2-depth4-20260622-p0.md  local-fp8-gpuonly-vllm021-tp2-depth4-20260622-p0.md
docs/experiments/: p1-001-cuda-graph-eager-ab.md  p1-001r-cuda-graph-2x2-maintenance.md
docs/plans/: 2026-05-16-vllm-sidecar-gateway-implementation-plan.md  p0-001-evidence-audit.json  p0-001-release-baseline.md  p0-001-repository-evidence-audit.md  p0-002-persistent-benchmark-transport.md  p0-002-runtime-attestation.md  p0-003-mtp-metrics.md  p0-003-streaming-token-instrumentation.md  p0-004-automatic-2x2-comparator.md  p0-004-readiness-state-machine.md  p0-005-thought-channel-parser.md  p0-005-throughput-quality-lanes.md  p0-006-benchmark-harness-v2.md  p0-007-cuda-graph-observation.md  p0-007-documentation-release-artifacts.md  p0-008-p1-001r-code-gate.md  p1-001-cuda-graph-eager-ab.md  p1-001r-001-live-baseline.md  p1-001r-002-safe-shutdown-preflight.md  p1-001r-repair-cuda-graph-evidence.md  (+1 more)
scripts/: make_source_archive.sh  p0_001_evidence_audit.py  smoke_vllm_http_stack.py  verify_source_archive.sh  verify_wheel_freshness.sh
tests/: test_anthropic_adapter.py  test_anthropic_server.py  test_bench_cli.py  test_benchmarking.py  test_cli.py  test_cluster.py  test_doctor.py  test_graph_observation.py  test_launch.py  test_middleware.py  test_mtp_metrics.py  test_openai_server.py  test_p0_001_evidence_audit.py  test_package_metadata.py  test_policy.py  test_profiles.py  test_quality_suite.py  test_release_scripts.py  test_response_parser.py  test_runtime_attestation.py  test_runtime_state.py  test_server_app.py  test_server_health.py  test_server_limits.py  test_validation.py  test_vllm_client.py  test_vllm_stack_constraints.py
(+25 files in other folders)
