[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gemma4-mtp-vllm"
version = "0.2.0a1"
description = "Gemma 4 31B MTP local API gateway on vLLM"
license = "Apache-2.0"
authors = [
    { name = "Alican Kiraz" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "tomli>=2; python_version<'3.11'",
]
dev = [
    "build>=1.2",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "tomli>=2; python_version<'3.11'",
]
vllm = [
    "vllm==0.21.0",
    "fastapi>=0.115,<0.137",
    "prometheus-fastapi-instrumentator==7.1.0",
]

[project.scripts]
vllm-mtp = "gemma4_mtp_vllm.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma4_mtp_vllm"]
